YES-109 Fixed button display to overflow
- Buttons no longer squished when viewport width is too low

--- a/front-end/src/components/theZone/TheZone.css
+++ b/front-end/src/components/theZone/TheZone.css
@@ -6,6 +6,7 @@
 .redirect {
   width: 33.3%;
   font-size: 3.5vh;
+  white-space: nowrap;
 }
 
 body {
